GearsetPOC/force-app/main/default/objects/Account_Branches__c/Account_Branches__c.object-meta.xml
<CustomObject>
    <label>Account Branch</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>