GearsetPOC/force-app/main/default/objects/Account_Branches__c/fields/Branch_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Branch_Email_Address__c</fullName>
    <label>Branch Email Address</label>
    <type>Email</type>
</CustomField>