GearsetPOC/force-app/main/default/objects/Account_Branches__c/fields/Commercial_Account__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Account</label>
    <referenceTo>Trade_Sales_Account__c</referenceTo>
    <relationshipLabel>Account Branches</relationshipLabel>
    <relationshipName>Account_Branches</relationshipName>
    <type>Lookup</type>
</CustomField>