GearsetPOC/force-app/main/default/objects/Account_Branches__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>IF(RecordTypeId = &quot;0120N000000sdnk&quot;,   Trade_Contracts_Account__r.Name ,  Commercial_Account__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>