GearsetPOC/force-app/main/default/objects/Account_Branches__c/fields/Corporate_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Name__c</fullName>
    <label>Corporate Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>