GearsetPOC/force-app/main/default/objects/Account_Branches__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Branches</relationshipLabel>
    <relationshipName>Account_Branches</relationshipName>
    <type>Lookup</type>
</CustomField>