GearsetPOC/force-app/main/default/objects/Account_Branches__c/fields/Trade_Contracts_Account__c.field-meta.xml
<CustomField>
    <fullName>Trade_Contracts_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Contracts Account</label>
    <referenceTo>Trade_Contracts_Company__c</referenceTo>
    <relationshipLabel>Account Branches</relationshipLabel>
    <relationshipName>Account_Branches</relationshipName>
    <type>Lookup</type>
</CustomField>