GearsetPOC/force-app/main/default/objects/Account_Branches__c/recordTypes/TMC_Branch.recordType-meta.xml
<RecordType>
    <fullName>TMC_Branch</fullName>
    <active>true</active>
    <label>TMC Branch</label>
</RecordType>