GearsetPOC/force-app/main/default/objects/Account_Branches__c/recordTypes/Trade_Contracts_Branch.recordType-meta.xml
<RecordType>
    <fullName>Trade_Contracts_Branch</fullName>
    <active>true</active>
    <label>Trade Contracts Branch</label>
</RecordType>