GearsetPOC/force-app/main/default/objects/Account_Branches__c/listViews/TMC_Branches.listView-meta.xml
<ListView>
    <fullName>TMC_Branches</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account_Branches__c.TMC_Branch</value>
    </filters>
    <label>TMC Branches</label>
    <language>en_US</language>
</ListView>