GearsetPOC/force-app/main/default/objects/Account_Branches__c/listViews/Trade_Contract_Branches.listView-meta.xml
<ListView>
    <fullName>Trade_Contract_Branches</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account_Branches__c.Trade_Contracts_Branch</value>
    </filters>
    <label>Trade Contract Branches</label>
    <language>en_US</language>
</ListView>